streamlit and script

--- a/src/mvp_test.ipynb
+++ b/src/mvp_test.ipynb
@@ -13,12 +13,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "08246147",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Month\n",
+       "0        20\n",
+       "1     14936\n",
+       "2     13879\n",
+       "3     15257\n",
+       "4     15152\n",
+       "5     16875\n",
+       "6     15359\n",
+       "7     16268\n",
+       "8     15800\n",
+       "9     14180\n",
+       "10    15563\n",
+       "11    14906\n",
+       "12    13496\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# df['Month'].value_counts().sort_index()\n",
+    "df['Month'].value_counts().sort_index()\n",
     "# 0 - unknown, 1- Jan to 12 - Dec -> Sliders"
    ]
   },
@@ -136,6 +161,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f913b11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from library import *\n",
+    "from streamlit_script import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5d0f36d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\DDI\\terrorism\\src\\script.py:32: DtypeWarning: Columns (4,6,31,33,61,62,63,76,79,90,92,94,96,114,115,121) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(data_path)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = loading_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "40137c15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def input_to_model(df):\n",
+    "    \"\"\"\n",
+    "    Generate a random attack scenario from the dataset for model input.\n",
+    "    df: your loaded dataframe\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Get unique options for categorical columns\n",
+    "    countries = df['Country'].unique()\n",
+    "    regions = df['Region'].unique()\n",
+    "    attack_types = df['Attack_Type'].unique()\n",
+    "    weapon_types = df['Weapon_Type'].unique()\n",
+    "    nationalities = df['Nationality'].unique()\n",
+    "    \n",
+    "    # Generate random input\n",
+    "    input_data = pd.DataFrame([{\n",
+    "        'Year': np.random.randint(1971, 2018),  # 2017 inclusive\n",
+    "        'Month': np.random.randint(1, 13),      # 1–12\n",
+    "        'Country': np.random.choice(countries),\n",
+    "        'Region': np.random.choice(regions),\n",
+    "        'Attack_Type': np.random.choice(attack_types),\n",
+    "        'Weapon_Type': np.random.choice(weapon_types),\n",
+    "        'ismilitary': np.random.choice([0, 1]),\n",
+    "        'Nationality': np.random.choice(nationalities)\n",
+    "    }])\n",
+    "    return input_data\n",
+    "\n",
+    "random_data = input_to_model(df)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "200cba9b",
    "metadata": {},
@@ -149,28 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4f913b11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from library import *\n",
-    "from script import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d0f36d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = loading_df()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "id": "477484da",
    "metadata": {},
    "outputs": [
@@ -178,19 +248,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Year  Month   Country          Region    Attack_Type Weapon_Type  \\\n",
-      "0  1981      9  Thailand  Western Europe  Armed Assault  Incendiary   \n",
+      "   Year  Month  Country          Region    Attack_Type   Weapon_Type  \\\n",
+      "0  1989      1  Romania  Eastern Europe  Assassination  Fake Weapons   \n",
       "\n",
-      "   ismilitary  Nationality  \n",
-      "0           0  North Yemen  \n",
-      "Prediction: Likely to succeed (96.00 Confidence)\n"
+      "   ismilitary Nationality  \n",
+      "0           0    Bulgaria  \n",
+      "Prediction: Likely to succeed (60.00 Confidence)\n"
      ]
     }
    ],
    "source": [
     "randm_data = input_to_model(df)\n",
     "\n",
-    "saved_data = joblib.load('model/rfc_terrorist_success_rate.joblib')\n",
+    "saved_data = joblib.load('model/bm_terrorist_success_rate.joblib')\n",
     "model = saved_data['model']\n",
     "metadata = saved_data['metadata']\n",
     "\n",
