working streamlit mvp

--- a/notebooks/mvp_test.ipynb
+++ b/notebooks/mvp_test.ipynb
@@ -2,18 +2,108 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "31517bee",
+   "execution_count": 108,
+   "id": "4f913b11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df['Year'].value_counts().sort_index()\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import plotly.express as px\n",
+    "import statsmodels.formula.api as smf\n",
+    "import statsmodels.api as sm\n",
+    "import joblib\n",
+    "from math import ceil\n",
+    "from scipy import stats\n",
+    "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score, StratifiedKFold\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier, GradientBoostingClassifier, GradientBoostingClassifier\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, root_mean_squared_error, r2_score, accuracy_score, classification_report\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score, confusion_matrix, roc_curve, roc_auc_score, auc, precision_recall_curve\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler, MinMaxScaler, OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from imblearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "f43e712a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hungh\\AppData\\Local\\Temp\\ipykernel_28844\\1328876346.py:3: DtypeWarning: Columns (4,6,31,33,61,62,63,76,79,90,92,94,96,114,115,121) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(data_path)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def loading_df():\n",
+    "    data_path = r\"D:\\DDI\\terrorism\\data\\globalterrorismdb_0718dist.csv\"\n",
+    "    df = pd.read_csv(data_path)\n",
+    "\n",
+    "    # Rename columns for ML use\n",
+    "    df = df.rename(columns={\n",
+    "        'iyear': 'Year',\n",
+    "        'imonth': 'Month',\n",
+    "        'region_txt': 'Region',\n",
+    "        'attacktype1_txt': 'Attack_Type',\n",
+    "        'weaptype1_txt': 'Weapon_Type',\n",
+    "        'natlty1_txt': 'Nationality'\n",
+    "    })\n",
+    "\n",
+    "    # Military target mapping (do this before selecting columns)\n",
+    "    df['ismilitary'] = (df['targtype1_txt'] == 'Military').astype(int)\n",
+    "\n",
+    "    # Select only relevant columns\n",
+    "    df = df[['Year', 'Month', 'Region', 'Attack_Type',\n",
+    "             'Weapon_Type', 'ismilitary', 'Nationality', 'success']]\n",
+    "    return df\n",
+    "\n",
+    "df = loading_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "31517bee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Year\n",
+       "1974      581\n",
+       "1971      471\n",
+       "1991     4683\n",
+       "2015    14965\n",
+       "2014    16903\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Year'].value_counts().sort_index().sample(5)\n",
     "# 1970 - 2017 -> sliders"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "id": "08246147",
    "metadata": {},
    "outputs": [
@@ -37,7 +127,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,29 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "193a5f68",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "205\n",
-      "['Afghanistan' 'Albania' 'Algeria' 'Andorra' 'Angola'\n",
-      " 'Antigua and Barbuda' 'Argentina' 'Armenia' 'Australia' 'Austria']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# countries = df['Country'].sort_values().unique()\n",
-    "# print(len(countries))  # Should print 205\n",
-    "# print(countries[:10])  # Preview first 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "92486385",
    "metadata": {},
    "outputs": [
@@ -94,19 +162,19 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# df['Region'].value_counts()\n",
-    "# # Select Box"
+    "df['Region'].value_counts()\n",
+    "# Select Box"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "a91f46f9",
    "metadata": {},
    "outputs": [
@@ -129,7 +197,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "61d707fe",
    "metadata": {},
    "outputs": [
@@ -163,36 +231,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f913b11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from library import *\n",
-    "from streamlit_script import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "5d0f36d0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\DDI\\terrorism\\src\\script.py:32: DtypeWarning: Columns (4,6,31,33,61,62,63,76,79,90,92,94,96,114,115,121) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(data_path)\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = loading_df()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
    "id": "40137c15",
    "metadata": {},
    "outputs": [],
@@ -204,7 +242,6 @@
     "    \"\"\"\n",
     "    \n",
     "    # Get unique options for categorical columns\n",
-    "    countries = df['Country'].unique()\n",
     "    regions = df['Region'].unique()\n",
     "    attack_types = df['Attack_Type'].unique()\n",
     "    weapon_types = df['Weapon_Type'].unique()\n",
@@ -213,13 +250,14 @@
     "    # Generate random input\n",
     "    input_data = pd.DataFrame([{\n",
     "        'Year': np.random.randint(1971, 2018),  # 2017 inclusive\n",
-    "        'Month': np.random.randint(1, 13),      # 1–12\n",
-    "        'Country': np.random.choice(countries),\n",
+    "        'Month': np.random.randint(0, 13),      # 1–12\n",
     "        'Region': np.random.choice(regions),\n",
     "        'Attack_Type': np.random.choice(attack_types),\n",
     "        'Weapon_Type': np.random.choice(weapon_types),\n",
     "        'ismilitary': np.random.choice([0, 1]),\n",
     "        'Nationality': np.random.choice(nationalities)\n",
+    "\n",
+    "    \n",
     "    }])\n",
     "    return input_data\n",
     "\n",
@@ -240,7 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 180,
+   "id": "6fdb8888",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['model', 'coefficients', 'metadata'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(saved_data.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
    "id": "477484da",
    "metadata": {},
    "outputs": [
@@ -248,28 +304,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Year  Month  Country          Region    Attack_Type   Weapon_Type  \\\n",
-      "0  1989      1  Romania  Eastern Europe  Assassination  Fake Weapons   \n",
+      "   Year  Month                       Region  \\\n",
+      "0  1972      1  Central America & Caribbean   \n",
       "\n",
-      "   ismilitary Nationality  \n",
-      "0           0    Bulgaria  \n",
-      "Prediction: Likely to succeed (60.00 Confidence)\n"
+      "                           Attack_Type   Weapon_Type  ismilitary Nationality  \n",
+      "0  Hostage Taking (Barricade Incident)  Radiological           0     Germany  \n",
+      "\n",
+      "--- Insert Model Coefficients ---\n",
+      "                               Feature  Importance\n",
+      "1                                Month    0.264221\n",
+      "0                                 Year    0.253141\n",
+      "26              Weapon_Type_Explosives    0.052204\n",
+      "16           Attack_Type_Assassination    0.038341\n",
+      "2                           ismilitary    0.035600\n",
+      "..                                 ...         ...\n",
+      "201               Nationality_Slovenia    0.000000\n",
+      "211             Nationality_St. Martin    0.000000\n",
+      "226           Nationality_Turkmenistan    0.000000\n",
+      "236                Nationality_Vanuatu    0.000000\n",
+      "240  Nationality_Virgin Islands (U.S.)    0.000000\n",
+      "\n",
+      "[248 rows x 2 columns]\n",
+      "Accuracy: 0.89\n",
+      "Prediction: Likely to fail (80.00 Confidence)\n"
      ]
     }
    ],
    "source": [
     "randm_data = input_to_model(df)\n",
     "\n",
-    "saved_data = joblib.load('model/bm_terrorist_success_rate.joblib')\n",
+    "saved_data = joblib.load('../model/bm_terrorist_success_rate.joblib')\n",
     "model = saved_data['model']\n",
     "metadata = saved_data['metadata']\n",
+    "coefficients = saved_data['coefficients']\n",
     "\n",
     "prediction = model.predict(randm_data)\n",
     "confidence = model.predict_proba(randm_data)\n",
     "print(randm_data)\n",
     "# print(prediction)\n",
     "# print(\"Confidence probabilities:\", confidence[0])\n",
-    "\n",
+    "print(f\"\\n--- Insert Model Coefficients ---\")\n",
+    "print(coefficients)\n",
+    "print(\"Accuracy:\", metadata['accuracy'])\n",
     "# Human-readable interpretation\n",
     "interpretation = \"Likely to succeed\" if prediction[0] == 1 else \"Likely to fail\"\n",
     "confidence_score = confidence[0][prediction[0]]\n",
